# word-unscrambler

./: CMakeLists.txt  LICENSE  README.MD  meson.build  run.sh
src/: main.cpp  trie.cpp  trie.hpp  unscrambler.cpp  unscrambler.hpp  utils.cpp  utils.hpp
