project('word-unscrambler', 'cpp', default_options: ['cpp_std=c++20'])

executable('word-unscrambler',
    sources: [
        'src/main.cpp',
        'src/trie.cpp',
        'src/trie.hpp',
        'src/unscrambler.cpp',
        'src/unscrambler.hpp',
        'src/utils.cpp',
        'src/utils.hpp',
    ],
)